--- a/index.html
+++ b/index.html
@@ -8,24 +8,16 @@
     <title>Space Odissey</title>
 </head>
 <body id="index">
-    <header>
+    <header id="title">
         <h1>Space Odissey</h1>
     </header>
 
     <main>
         <ul>
-            <li><a href="levels/levels_menu.html">Levels</a></li>
-            <li><a href="#creators">Who are we?</a></li>
+            <li><a href="html/levels_menu.html">Levels</a></li>
+            <li><a href="html/creators.html">Who are we?</a></li>
         </ul>
     </main>
 
-    <footer id="creators">
-        <ul>
-            <li>Sergio Blanco</li>
-            <li>Pere Carrillo</li>
-            <li>Laura Pérez</li>
-            <li>Pol Vila</li>
-        </ul>
-    </footer>
 </body>
 </html>
