--- a/html/levels/index.html
+++ b/html/levels/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Gravity Points</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/style.css">
 
 </head>
-<body>
+<body class="game">
 
 <!-- partial:index.partial.html -->
 <canvas id="c"></canvas>
