--- a/html/creators.html
+++ b/html/creators.html
@@ -9,12 +9,16 @@
 </head>
 <body id = "creators">
 
-    <a href="../index.html">↑</a>
-        <ul>
-            <li>Sergio Blanco</li>
-            <li>Pere Carrillo</li>
-            <li>Laura Pérez</li>
-            <li>Pol Vila</li>
-        </ul> 
+    
+
+    <ul>
+        <li>Sergio Blanco</li>
+        <li>Pere Carrillo</li>
+        <li>Laura Pérez</li>
+        <li>Pol Vila</li>
+    </ul> 
+
+    
+    <a href="../index.html" class="back">←</a>
 </body>
 </html>
