--- a/html/levels_menu.html
+++ b/html/levels_menu.html
@@ -8,7 +8,11 @@
     <title>Levels Menu</title>
 </head>
 <body id="levels">
+    
     <h1>Levels</h1>
+
+    <a href="../index.html" class="back">←</a>
+
     <ul>
         <li><a href="./levels/lvl1.html">Level 1</a></li>
     </ul>
