--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="html/levels_menu.html">Levels</a></li>
             <li><a href="html/creators.html">Who are we?</a></li>
+            <li><a href="html/tutorial.html">Tutorial</a></li>
         </ul>
     </main>
 
