--- a/html/levels/lvl1.html
+++ b/html/levels/lvl1.html
@@ -11,7 +11,9 @@
 <!-- partial:index.partial.html -->
 <canvas id="c"></canvas>
 
-  <button class="btn" onClick="StartGame();">Start</button>
+  <button  class="btn" onClick="StartGame();">Start</button>
+
+  <button  class="btn2" onClick="ResetGame();">Reset</button>
 
 <!-- partial -->
 
