--- a/html/levels/lvl1.html
+++ b/html/levels/lvl1.html
@@ -11,9 +11,9 @@
 <!-- partial:index.partial.html -->
 <canvas id="c"></canvas>
 
-  <button  class="btn" onClick="StartGame();">Start</button>
+  <button  class="btn" id="btn1" onClick="StartGame();">Start</button>
 
-  <button  class="btn2" onClick="ResetGame();">Reset</button>
+  <button  class="btn" id="btn2" onClick="ResetGame();">Reset</button>
 
 <!-- partial -->
 
