--- a/html/levels/lvl1.html
+++ b/html/levels/lvl1.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>CodePen - Gravity Points</title>
+  <title>Level 1</title>
   <link rel="stylesheet" href="../../css/style.css">
 
 </head>
