--- a/html/levels_menu.html
+++ b/html/levels_menu.html
@@ -15,6 +15,10 @@
 
     <ul>
         <li><a href="./levels/lvl1.html">Level 1</a></li>
+        <li><a href="./levels/lvl2.html">Level 2</a></li>
+        <li><a href="./levels/lvl3.html">Level 3</a></li>
+        <li><a href="./levels/lvl4.html">Level 4</a></li>
+        <li><a href="./levels/lvl5.html">Level 5</a></li>
     </ul>
 </body>
 </html>
