--- a/html/levels_menu.html
+++ b/html/levels_menu.html
@@ -19,6 +19,11 @@
         <li><a href="./levels/lvl3.html">Level 3</a></li>
         <li><a href="./levels/lvl4.html">Level 4</a></li>
         <li><a href="./levels/lvl5.html">Level 5</a></li>
+        <li><a href="./levels/lvl6.html">Level 6</a></li>
+        <li><a href="./levels/lvl7.html">Level 7</a></li>
+        <li><a href="./levels/lvl8.html">Level 8</a></li>
+        <li><a href="./levels/lvl9.html">Level 9</a></li>
+        <li><a href="./levels/lvl10.html">Level 10</a></li>
     </ul>
 </body>
 </html>
