--- a/html/win.html
+++ b/html/win.html
@@ -9,7 +9,7 @@
 </head>
 <body id="win">
     <h3>Congratualtions!!!</h3>
-    <p>You finnished the first level</p>
+    <p>You finnished the level</p>
     <p>Advance to the next ones to find new challenges!</p>
     <h4><a href="levels_menu.html">Next</a></h4>
     
