--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="index">
     <header id="title">
-        <h1>Space Odissey</h1>
+        <h1>Space Odyssey</h1>
     </header>
 
     <main>
