--- a/html/tutorial.html
+++ b/html/tutorial.html
@@ -9,7 +9,7 @@
 </head>
 <body id="tutorial">
     <h3>Objective</h3>
-    <p>Reach the end line!</p>
+    <p>Reach the purple portal to escape!</p>
 
     <h3></h3>
     <p></p>
