--- a/html/levels_menu.html
+++ b/html/levels_menu.html
@@ -8,15 +8,15 @@
     <title>Levels Menu</title>
 </head>
 <body id="levels">
-    
+
     <h1>Levels</h1>
 
     <a href="../index.html" class="back">←</a>
 
     <ul>
         <li><a href="./levels/lvl1.html">Level 1</a></li>
-        <li><a href="./levels/lvl2.html">Level 2</a></li>
-        <li><a href="./levels/lvl3.html">Level 3</a></li>
+        <li><a href="./info/asteroids.html">Level 2</a></li>
+        <li><a href="./info/sun.html">Level 3</a></li>
         <li><a href="./levels/lvl4.html">Level 4</a></li>
         <li><a href="./levels/lvl5.html">Level 5</a></li>
         <li><a href="./levels/lvl6.html">Level 6</a></li>
