--- a/html/info/asteroids.html
+++ b/html/info/asteroids.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <title>Watch out!</title>
 </head>
-<body id="watchout">
+<body class="watchout">
     <h1>Watch out!!!</h1>
     <p>Asteroids nearby</p>
     <h4><a href="../levels/lvl2.html">Next</a></h4>
