--- a/html/info/sun.html
+++ b/html/info/sun.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <title>>Watch out!</title>
 </head>
-<body id="watchout">
+<body class="watchout">
     <h1>Watch out!!!</h1>
     
     <p>A star nearby</p>
