--- a/html/levels_menu.html
+++ b/html/levels_menu.html
@@ -21,8 +21,8 @@
         <li><a href="./levels/lvl5.html">Level 5</a></li>
         <li><a href="./levels/lvl6.html">Level 6</a></li>
         <li><a href="./levels/lvl7.html">Level 7</a></li>
-        <li><a href="./coming_soon.html">Level 8</a></li>
-        <li><a href="./coming_soon.html">Level 9</a></li>
+        <li><a href="./levels/lvl8.html">Level 8</a></li>
+        <li><a href="./levels/lvl9.html">Level 9</a></li>
         <li><a href="./coming_soon.html">Level 10</a></li>
     </ul>
 </body>
